# libImageCompareLite

./: CMakeLists.txt  README.md  build.gradle
src/androidTest/java/com/hf/imagecomparelite/: ExampleInstrumentedTest.java
src/main/: AndroidManifest.xml
src/main/cpp/: Debugger.cpp  Debugger.h  Feature.h  FeatureCompare.cpp  FeatureCompare.h  HashCompare.cpp  HashCompare.h  ImageMerge.cpp  ImageMerge.h  MultiThreadTask.cpp  MultiThreadTask.h  NativeBitmap.cpp  NativeBitmap.h  NativeBitmapUtil.cpp  NativeBitmapUtil.h  inc.h  log.h  native-ImageMerge.cpp  native-ImageMerge.h  native-NativeBitmap.cpp  native-NativeBitmap.h
src/main/java/com/hf/imagecomparelite/: BitmapDecoder.java  ImageMerge.java  NativeBitmap.java
src/main/res/values/: strings.xml
src/test/java/com/hf/imagecomparelite/: ExampleUnitTest.java
